--- a/index.html
+++ b/index.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Test Page</title>
-  <link rel="stylesheet" href="./test.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Simple Webpage</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1 id="demo">Hello GitHub!</h1>
-  <script src="./test.js"></script>
+
+    <div class="container">
+        <h1 id="myHeading">Hello World!</h1>
+        <button id="myButton">Click Me!</button>
+    </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
