--- a/index.html
+++ b/index.html
@@ -41,47 +41,52 @@
     </div>
   </header>
 
-  <!-- Products Section -->
-  <section class="py-5" id="products">
-    <div class="container">
-      <h2 class="text-center mb-4">Featured Products</h2>
-      <div class="row g-4">
-        <!-- Product Card -->
-        <div class="col-md-4">
-          <div class="card h-100">
-            <img src="https://source.unsplash.com/300x300/?handmade,craft" class="card-img-top" alt="Product">
-            <div class="card-body text-center">
-              <h5 class="card-title">Woven Basket</h5>
-              <p class="card-text">₹499</p>
-              <button class="btn btn-primary add-to-cart">Add to Cart</button>
-            </div>
-          </div>
-        </div>
-        <!-- Repeat for more products -->
-        <div class="col-md-4">
-          <div class="card h-100">
-            <img src="https://source.unsplash.com/300x300/?handmade,gift" class="card-img-top" alt="Product">
-            <div class="card-body text-center">
-              <h5 class="card-title">Handmade Gift Box</h5>
-              <p class="card-text">₹799</p>
-              <button class="btn btn-primary add-to-cart">Add to Cart</button>
-            </div>
-          </div>
-        </div>
-        <!-- Third product -->
-        <div class="col-md-4">
-          <div class="card h-100">
-            <img src="https://source.unsplash.com/300x300/?craft,diy" class="card-img-top" alt="Product">
-            <div class="card-body text-center">
-              <h5 class="card-title">DIY Kit</h5>
-              <p class="card-text">₹299</p>
-              <button class="btn btn-primary add-to-cart">Add to Cart</button>
-            </div>
+<!-- Products Section -->
+<section class="py-5" id="products">
+  <div class="container">
+    <h2 class="text-center mb-4">Featured Products</h2>
+    <div class="row g-4">
+      
+      <!-- Product 1 -->
+      <div class="col-md-4">
+        <div class="card h-100 shadow-sm">
+          <img src="https://images.unsplash.com/photo-1601049536843-4ddc91ed6463" class="card-img-top" alt="Woven Basket">
+          <div class="card-body text-center">
+            <h5 class="card-title">Woven Basket</h5>
+            <p class="card-text">₹499</p>
+            <button class="btn btn-primary add-to-cart">Add to Cart</button>
           </div>
         </div>
       </div>
+
+      <!-- Product 2 -->
+      <div class="col-md-4">
+        <div class="card h-100 shadow-sm">
+          <img src="https://images.unsplash.com/photo-1616627984605-658c291c1e9c" class="card-img-top" alt="Handmade Gift Box">
+          <div class="card-body text-center">
+            <h5 class="card-title">Handmade Gift Box</h5>
+            <p class="card-text">₹799</p>
+            <button class="btn btn-primary add-to-cart">Add to Cart</button>
+          </div>
+        </div>
+      </div>
+
+      <!-- Product 3 -->
+      <div class="col-md-4">
+        <div class="card h-100 shadow-sm">
+          <img src="https://images.unsplash.com/photo-1631217866186-b1870d43ed4e" class="card-img-top" alt="DIY Kit">
+          <div class="card-body text-center">
+            <h5 class="card-title">DIY Kit</h5>
+            <p class="card-text">₹299</p>
+            <button class="btn btn-primary add-to-cart">Add to Cart</button>
+          </div>
+        </div>
+      </div>
+
     </div>
-  </section>
+  </div>
+</section>
+
 
   <!-- Footer -->
   <footer class="bg-dark text-white py-3 text-center">
