--- a/index.html
+++ b/index.html
@@ -14,28 +14,20 @@
 </head>
 <body>
 
- <!-- Stylish Navigation Bar -->
-<nav class="navbar navbar-expand-lg custom-navbar sticky-top">
+<!-- Unique Navbar -->
+<nav class="navbar navbar-expand-lg navbar-dark custom-navbar sticky-top">
   <div class="container">
-    <a class="navbar-brand fw-bold text-white" href="#">CraftCulture</a>
-    <button class="navbar-toggler text-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-      <i class="fas fa-bars"></i>
+    <a class="navbar-brand fw-bold" href="#">CraftCulture</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup">
+      <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav ms-auto">
-        <li class="nav-item">
-          <a class="nav-link active" href="#">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#products">Shop</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">About</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Contact</a>
-        </li>
-      </ul>
+    <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
+      <div class="navbar-nav">
+        <a class="nav-link active" href="#">Home</a>
+        <a class="nav-link" href="#products">Shop</a>
+        <a class="nav-link" href="#">About</a>
+        <a class="nav-link" href="#">Contact</a>
+      </div>
     </div>
   </div>
 </nav>
