--- a/index.html
+++ b/index.html
@@ -1,101 +1,180 @@
-<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>CraftCulture - Handmade Treasures</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>ShrishStyles - Clothing Store</title>
   <!-- Bootstrap CDN -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <!-- Custom CSS -->
   <link rel="stylesheet" href="style.css">
+  <style>
+    body {
+      font-family: 'Poppins', sans-serif;
+    }
+
+    /* Unique Navigation Bar */
+    .navbar-custom {
+      background: #000;
+      border-bottom: 2px solid #f9c74f;
+      padding: 0.8rem 0;
+    }
+
+    .navbar-custom .navbar-brand {
+      color: #f9c74f;
+      font-size: 1.8rem;
+      font-weight: bold;
+      letter-spacing: 1px;
+    }
+
+    .navbar-custom .nav-link {
+      color: #fff !important;
+      margin-left: 20px;
+      position: relative;
+      font-weight: 500;
+    }
+
+    .navbar-custom .nav-link:hover::after {
+      content: '';
+      position: absolute;
+      width: 100%;
+      height: 2px;
+      background: #f9c74f;
+      left: 0;
+      bottom: -4px;
+    }
+
+    .hero {
+      background: url('https://images.unsplash.com/photo-1520975695918-dcde1f8c5880?auto=format&fit=crop&w=1600&q=80') center/cover no-repeat;
+      height: 90vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: #fff;
+      text-align: center;
+      position: relative;
+    }
+
+    .hero::before {
+      content: '';
+      position: absolute;
+      inset: 0;
+      background: rgba(0, 0, 0, 0.6);
+    }
+
+    .hero .content {
+      position: relative;
+      z-index: 1;
+    }
+
+    .hero h1 {
+      font-size: 3rem;
+      font-weight: bold;
+    }
+
+    .hero p {
+      font-size: 1.2rem;
+    }
+
+    .card-img-top {
+      height: 280px;
+      object-fit: cover;
+    }
+
+    .card:hover {
+      transform: scale(1.02);
+      transition: 0.3s;
+    }
+
+    footer {
+      background: #000;
+      color: #fff;
+      padding: 20px 0;
+      text-align: center;
+    }
+  </style>
 </head>
 <body>
 
-<!-- Unique Navbar -->
-<nav class="navbar navbar-expand-lg navbar-dark custom-navbar sticky-top">
+<!-- Navigation Bar -->
+<nav class="navbar navbar-expand-lg navbar-custom sticky-top">
   <div class="container">
-    <a class="navbar-brand fw-bold" href="#">CraftCulture</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup">
+    <a class="navbar-brand" href="#">ShrishStyles</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
-      <div class="navbar-nav">
-        <a class="nav-link active" href="#">Home</a>
-        <a class="nav-link" href="#products">Shop</a>
-        <a class="nav-link" href="#">About</a>
-        <a class="nav-link" href="#">Contact</a>
-      </div>
+    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
+        <li class="nav-item"><a class="nav-link" href="#men">Men</a></li>
+        <li class="nav-item"><a class="nav-link" href="#women">Women</a></li>
+        <li class="nav-item"><a class="nav-link" href="#kids">Kids</a></li>
+        <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+      </ul>
     </div>
   </div>
 </nav>
 
-
-  <!-- Hero Section -->
-  <header class="hero text-white text-center d-flex align-items-center">
-    <div class="container">
-      <h1 class="display-4">Discover Handmade Wonders</h1>
-      <p class="lead">Unique, beautiful, and crafted with love</p>
-      <a href="#products" class="btn btn-warning mt-3">Shop Now</a>
-    </div>
-  </header>
+<!-- Hero Section -->
+<section class="hero">
+  <div class="content">
+    <h1>Be Stylish Every Day</h1>
+    <p>Trendy, Affordable & Comfortable Clothing</p>
+    <a href="#products" class="btn btn-warning mt-3">Shop Now</a>
+  </div>
+</section>
 
 <!-- Products Section -->
 <section class="py-5" id="products">
   <div class="container">
-    <h2 class="text-center mb-4">Featured Products</h2>
+    <h2 class="text-center mb-5">Featured Collection</h2>
     <div class="row g-4">
-      
-      <!-- Product 1 -->
       <div class="col-md-4">
-        <div class="card h-100 shadow-sm">
-          <img src="https://images.unsplash.com/photo-1601049536843-4ddc91ed6463" class="card-img-top" alt="Woven Basket">
+        <div class="card">
+          <img src="https://images.unsplash.com/photo-1618354691543-1c402d81ba4b?auto=format&fit=crop&w=600&q=80" class="card-img-top" alt="T-shirt">
           <div class="card-body text-center">
-            <h5 class="card-title">Woven Basket</h5>
-            <p class="card-text">₹499</p>
-            <button class="btn btn-primary add-to-cart">Add to Cart</button>
+            <h5 class="card-title">Classic T-Shirt</h5>
+            <p class="card-text">₹599</p>
+            <button class="btn btn-primary">Add to Cart</button>
           </div>
         </div>
       </div>
-
-      <!-- Product 2 -->
       <div class="col-md-4">
-        <div class="card h-100 shadow-sm">
-          <img src="https://images.unsplash.com/photo-1616627984605-658c291c1e9c" class="card-img-top" alt="Handmade Gift Box">
+        <div class="card">
+          <img src="https://images.unsplash.com/photo-1618354691835-1be6bb5619ce?auto=format&fit=crop&w=600&q=80" class="card-img-top" alt="Hoodie">
           <div class="card-body text-center">
-            <h5 class="card-title">Handmade Gift Box</h5>
-            <p class="card-text">₹799</p>
-            <button class="btn btn-primary add-to-cart">Add to Cart</button>
+            <h5 class="card-title">Hoodie - Unisex</h5>
+            <p class="card-text">₹999</p>
+            <button class="btn btn-primary">Add to Cart</button>
           </div>
         </div>
       </div>
-
-      <!-- Product 3 -->
       <div class="col-md-4">
-        <div class="card h-100 shadow-sm">
-          <img src="https://images.unsplash.com/photo-1631217866186-b1870d43ed4e" class="card-img-top" alt="DIY Kit">
+        <div class="card">
+          <img src="https://images.unsplash.com/photo-1602810316663-c9f76cdd4518?auto=format&fit=crop&w=600&q=80" class="card-img-top" alt="Kurta">
           <div class="card-body text-center">
-            <h5 class="card-title">DIY Kit</h5>
-            <p class="card-text">₹299</p>
-            <button class="btn btn-primary add-to-cart">Add to Cart</button>
+            <h5 class="card-title">Ethnic Kurta</h5>
+            <p class="card-text">₹849</p>
+            <button class="btn btn-primary">Add to Cart</button>
           </div>
         </div>
       </div>
-
     </div>
   </div>
 </section>
 
+<!-- Footer -->
+<footer id="contact">
+  <div class="container">
+    <p>&copy; 2025 ShrishStyles. All Rights Reserved.</p>
+  </div>
+</footer>
 
-  <!-- Footer -->
-  <footer class="bg-dark text-white py-3 text-center">
-    <p>&copy; 2025 CraftCulture | All Rights Reserved</p>
-  </footer>
-
-  <!-- JS -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="script.js"></script>
+<!-- Bootstrap JS -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
