--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
       font-family: 'Poppins', sans-serif;
     }
 
+<link rel="stylesheet" href="style.css">
+
+
     /* Unique Navigation Bar */
     .navbar-custom {
       background: #000;
