--- a/index.html
+++ b/index.html
@@ -1,183 +1,260 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ShrishStyles - Clothing Store</title>
-  <!-- Bootstrap CDN -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <!-- Font Awesome -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-  <!-- Custom CSS -->
-  <link rel="stylesheet" href="style.css">
-  <style>
-    body {
-      font-family: 'Poppins', sans-serif;
-    }
-
-<link rel="stylesheet" href="style.css">
-
-
-    /* Unique Navigation Bar */
-    .navbar-custom {
-      background: #000;
-      border-bottom: 2px solid #f9c74f;
-      padding: 0.8rem 0;
-    }
-
-    .navbar-custom .navbar-brand {
-      color: #f9c74f;
-      font-size: 1.8rem;
-      font-weight: bold;
-      letter-spacing: 1px;
-    }
-
-    .navbar-custom .nav-link {
-      color: #fff !important;
-      margin-left: 20px;
-      position: relative;
-      font-weight: 500;
-    }
-
-    .navbar-custom .nav-link:hover::after {
-      content: '';
-      position: absolute;
-      width: 100%;
-      height: 2px;
-      background: #f9c74f;
-      left: 0;
-      bottom: -4px;
-    }
-
-    .hero {
-      background: url('https://images.unsplash.com/photo-1520975695918-dcde1f8c5880?auto=format&fit=crop&w=1600&q=80') center/cover no-repeat;
-      height: 90vh;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      color: #fff;
-      text-align: center;
-      position: relative;
-    }
-
-    .hero::before {
-      content: '';
-      position: absolute;
-      inset: 0;
-      background: rgba(0, 0, 0, 0.6);
-    }
-
-    .hero .content {
-      position: relative;
-      z-index: 1;
-    }
-
-    .hero h1 {
-      font-size: 3rem;
-      font-weight: bold;
-    }
-
-    .hero p {
-      font-size: 1.2rem;
-    }
-
-    .card-img-top {
-      height: 280px;
-      object-fit: cover;
-    }
-
-    .card:hover {
-      transform: scale(1.02);
-      transition: 0.3s;
-    }
-
-    footer {
-      background: #000;
-      color: #fff;
-      padding: 20px 0;
-      text-align: center;
-    }
-  </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>CraftCulture - Shirts Collection</title>
+  <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap" rel="stylesheet"/>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
+  <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
 
-<!-- Navigation Bar -->
-<nav class="navbar navbar-expand-lg navbar-custom sticky-top">
-  <div class="container">
-    <a class="navbar-brand" href="#">ShrishStyles</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
-        <li class="nav-item"><a class="nav-link" href="#men">Men</a></li>
-        <li class="nav-item"><a class="nav-link" href="#women">Women</a></li>
-        <li class="nav-item"><a class="nav-link" href="#kids">Kids</a></li>
-        <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+  <!-- HEADER -->
+  <header class="navbar">
+    <div class="logo">CraftCulture</div>
+    <nav>
+      <ul class="nav-links">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Shop</a></li>
+        <li><a href="#">New</a></li>
+        <li><a href="#">Contact</a></li>
       </ul>
+    </nav>
+  </header>
+
+  <!-- HERO SECTION -->
+  <section class="hero">
+    <div class="hero-text">
+      <h2>2024</h2>
+      <h1>Shirts Collection</h1>
+      <p>Summer Sale: Up to 50% OFF</p>
+      <a href="#" class="btn">Shop Now</a>
     </div>
-  </div>
-</nav>
+    <div class="hero-img">
+      <img src="https://images.unsplash.com/photo-1598032899328-85f26f84ba6e" alt="Shirt"/>
+      <div class="badge">-40% OFF</div>
+      <div class="price-tag">$199</div>
+    </div>
+  </section>
 
-<!-- Hero Section -->
-<section class="hero">
-  <div class="content">
-    <h1>Be Stylish Every Day</h1>
-    <p>Trendy, Affordable & Comfortable Clothing</p>
-    <a href="#products" class="btn btn-warning mt-3">Shop Now</a>
-  </div>
-</section>
+  <!-- BRAND LOGOS -->
+  <section class="brands">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/a/a9/Gucci_Logo.svg" alt="Gucci"/>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/5/53/H%26M-Logo.svg" alt="H&M"/>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/a/a6/Logo_NIKE.svg" alt="Nike"/>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/e/e3/The_North_Face_logo.svg" alt="North Face"/>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/e/e8/Prada-Logo.svg" alt="Prada"/>
+  </section>
 
-<!-- Products Section -->
-<section class="py-5" id="products">
-  <div class="container">
-    <h2 class="text-center mb-5">Featured Collection</h2>
-    <div class="row g-4">
-      <div class="col-md-4">
-        <div class="card">
-          <img src="https://images.unsplash.com/photo-1618354691543-1c402d81ba4b?auto=format&fit=crop&w=600&q=80" class="card-img-top" alt="T-shirt">
-          <div class="card-body text-center">
-            <h5 class="card-title">Classic T-Shirt</h5>
-            <p class="card-text">₹599</p>
-            <button class="btn btn-primary">Add to Cart</button>
-          </div>
-        </div>
+  <!-- NEW COLLECTION -->
+  <section class="collection">
+    <h2>New Collection</h2>
+    <div class="collection-grid">
+      <div class="card">
+        <img src="https://images.unsplash.com/photo-1520975918058-4e2c7a1d7b8b" alt="Shirt"/>
+        <p>Casual Shirts</p>
       </div>
-      <div class="col-md-4">
-        <div class="card">
-          <img src="https://images.unsplash.com/photo-1618354691835-1be6bb5619ce?auto=format&fit=crop&w=600&q=80" class="card-img-top" alt="Hoodie">
-          <div class="card-body text-center">
-            <h5 class="card-title">Hoodie - Unisex</h5>
-            <p class="card-text">₹999</p>
-            <button class="btn btn-primary">Add to Cart</button>
-          </div>
-        </div>
+      <div class="card">
+        <img src="https://images.unsplash.com/photo-1618354691373-54c0de69c2b6" alt="Shirt"/>
+        <p>Formal Shirts</p>
       </div>
-      <div class="col-md-4">
-        <div class="card">
-          <img src="https://images.unsplash.com/photo-1602810316663-c9f76cdd4518?auto=format&fit=crop&w=600&q=80" class="card-img-top" alt="Kurta">
-          <div class="card-body text-center">
-            <h5 class="card-title">Ethnic Kurta</h5>
-            <p class="card-text">₹849</p>
-            <button class="btn btn-primary">Add to Cart</button>
-          </div>
-        </div>
+      <div class="card">
+        <img src="https://images.unsplash.com/photo-1541099649105-f69ad21f3246" alt="Shirt"/>
+        <p>Denim Shirts</p>
       </div>
     </div>
-  </div>
-</section>
+  </section>
 
-<!-- Footer -->
-<footer id="contact">
-  <div class="container">
-    <p>&copy; 2025 ShrishStyles. All Rights Reserved.</p>
-  </div>
-</footer>
+  <!-- STATS -->
+  <section class="stats">
+    <div>50K+ Users</div>
+    <div>10K+ Products</div>
+    <div>100K+ Followers</div>
+  </section>
 
-<!-- Bootstrap JS -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- NEWSLETTER -->
+  <section class="newsletter">
+    <h3>Subscribe and get 20% OFF</h3>
+    <input type="email" placeholder="Enter your email"/>
+    <button class="btn">Subscribe</button>
+  </section>
+
+  <!-- FOOTER -->
+  <footer>
+    <p>&copy; 2025 CraftCulture. All rights reserved.</p>
+  </footer>
+
 </body>
 </html>
+
+
+---
+
+🎨 style.css (Design like ShopGrids)
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Quicksand', sans-serif;
+}
+
+body {
+  background: #f4f4f4;
+  color: #222;
+}
+
+.navbar {
+  background: #1c3b2f;
+  color: #fff;
+  padding: 20px 40px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.logo {
+  font-size: 1.8rem;
+  font-weight: bold;
+  color: yellow;
+}
+
+.nav-links {
+  list-style: none;
+  display: flex;
+  gap: 20px;
+}
+
+.nav-links a {
+  color: white;
+  text-decoration: none;
+}
+
+.hero {
+  background: #2d4b3f;
+  color: white;
+  display: flex;
+  justify-content: space-between;
+  padding: 50px;
+  align-items: center;
+}
+
+.hero-text h1 {
+  font-size: 3rem;
+  margin: 10px 0;
+}
+
+.btn {
+  padding: 10px 20px;
+  background: yellow;
+  color: #222;
+  text-decoration: none;
+  font-weight: bold;
+  border: none;
+  margin-top: 20px;
+  cursor: pointer;
+}
+
+.hero-img {
+  position: relative;
+}
+
+.hero-img img {
+  width: 300px;
+  border-radius: 20px;
+}
+
+.badge {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  background: yellow;
+  padding: 5px 10px;
+  font-weight: bold;
+  color: #222;
+}
+
+.price-tag {
+  position: absolute;
+  bottom: 10px;
+  left: 10px;
+  background: #fff;
+  color: #222;
+  padding: 5px 10px;
+  font-weight: bold;
+  border-radius: 5px;
+}
+
+.brands {
+  display: flex;
+  justify-content: center;
+  gap: 40px;
+  padding: 30px;
+  background: white;
+}
+
+.brands img {
+  height: 40px;
+  filter: grayscale(100%);
+}
+
+.collection {
+  padding: 40px;
+  background: #f9f9f9;
+  text-align: center;
+}
+
+.collection-grid {
+  display: flex;
+  justify-content: center;
+  gap: 30px;
+  margin-top: 20px;
+}
+
+.card {
+  background: white;
+  border-radius: 12px;
+  overflow: hidden;
+  box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+}
+
+.card img {
+  width: 200px;
+  height: 250px;
+  object-fit: cover;
+}
+
+.card p {
+  padding: 10px;
+  font-weight: bold;
+}
+
+.stats {
+  display: flex;
+  justify-content: space-around;
+  padding: 30px;
+  background: #1c3b2f;
+  color: white;
+  font-weight: bold;
+}
+
+.newsletter {
+  text-align: center;
+  padding: 40px;
+  background: #e2e2e2;
+}
+
+.newsletter input {
+  padding: 10px;
+  width: 250px;
+  margin: 10px;
+}
+
+footer {
+  text-align: center;
+  padding: 20px;
+  background: #111;
+  color: white;
+}
