--- a/index.html
+++ b/index.html
@@ -1,92 +1,21 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>CraftCulture - Shirts Collection</title>
-  <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap" rel="stylesheet"/>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
+  <title>Weather App</title>
   <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-
-  <!-- HEADER -->
-  <header class="navbar">
-    <div class="logo">CraftCulture</div>
-    <nav>
-      <ul class="nav-links">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Shop</a></li>
-        <li><a href="#">New</a></li>
-        <li><a href="#">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
-
-  <!-- HERO SECTION -->
-  <section class="hero">
-    <div class="hero-text">
-      <h2>2024</h2>
-      <h1>Shirts Collection</h1>
-      <p>Summer Sale: Up to 50% OFF</p>
-      <a href="#" class="btn">Shop Now</a>
-    </div>
-    <div class="hero-img">
-      <img src="https://images.unsplash.com/photo-1598032899328-85f26f84ba6e" alt="Shirt"/>
-      <div class="badge">-40% OFF</div>
-      <div class="price-tag">$199</div>
-    </div>
-  </section>
-
-  <!-- BRAND LOGOS -->
-  <section class="brands">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/a/a9/Gucci_Logo.svg" alt="Gucci"/>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/5/53/H%26M-Logo.svg" alt="H&M"/>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/a/a6/Logo_NIKE.svg" alt="Nike"/>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/e/e3/The_North_Face_logo.svg" alt="North Face"/>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/e/e8/Prada-Logo.svg" alt="Prada"/>
-  </section>
-
-  <!-- NEW COLLECTION -->
-  <section class="collection">
-    <h2>New Collection</h2>
-    <div class="collection-grid">
-      <div class="card">
-        <img src="https://images.unsplash.com/photo-1520975918058-4e2c7a1d7b8b" alt="Shirt"/>
-        <p>Casual Shirts</p>
-      </div>
-      <div class="card">
-        <img src="https://images.unsplash.com/photo-1618354691373-54c0de69c2b6" alt="Shirt"/>
-        <p>Formal Shirts</p>
-      </div>
-      <div class="card">
-        <img src="https://images.unsplash.com/photo-1541099649105-f69ad21f3246" alt="Shirt"/>
-        <p>Denim Shirts</p>
-      </div>
-    </div>
-  </section>
-
-  <!-- STATS -->
-  <section class="stats">
-    <div>50K+ Users</div>
-    <div>10K+ Products</div>
-    <div>100K+ Followers</div>
-  </section>
-
-  <!-- NEWSLETTER -->
-  <section class="newsletter">
-    <h3>Subscribe and get 20% OFF</h3>
-    <input type="email" placeholder="Enter your email"/>
-    <button class="btn">Subscribe</button>
-  </section>
-
-  <!-- FOOTER -->
-  <footer>
-    <p>&copy; 2025 CraftCulture. All rights reserved.</p>
-  </footer>
-
+  <div class="container">
+    <h1>Live Weather Update</h1>
+    <input type="text" id="cityInput" placeholder="Enter city name" />
+    <button onclick="getWeather()">Get Weather</button>
+    <div id="weatherResult"></div>
+  </div>
+  <script src="script.js"></script>
 </body>
 </html>
+
 
 
