--- a/index.html
+++ b/index.html
@@ -3,28 +3,31 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>🌦️ Shrish Bhai Weather</title>
+  <title>🌦️ Weather | Yash Bankhele</title>
   <link rel="stylesheet" href="style.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
   <div class="container">
-    <h1>🌤️ Weather by <span class="shrish">Shrish Bhai</span></h1>
+    <h1 class="main-heading">🌤️ Weather by <span class="author-name">Yash Bankhele</span></h1>
+
     <div class="search-box">
-      <input type="text" id="cityInput" placeholder="Enter city..." />
+      <input type="text" id="cityInput" placeholder="Enter city name..." />
       <button onclick="getWeather()">Search</button>
     </div>
+
     <div id="weatherCard" class="weather-card hidden">
       <h2 id="cityName"></h2>
-      <img id="weatherIcon" src="" alt="Icon" />
+      <img id="weatherIcon" src="" alt="Weather Icon" />
       <p id="temperature"></p>
       <p id="description"></p>
       <p id="humidity"></p>
       <p id="wind"></p>
     </div>
-    <footer>⚡ Built with ❤️ by <b>Shrish Bhai</b></footer>
+
+    <footer>🚀 Crafted with ❤️ by <strong>Yash Bankhele</strong></footer>
   </div>
+
   <script src="script.js"></script>
 </body>
 </html>
-
