--- a/index.html
+++ b/index.html
@@ -3,15 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>🌦️ Weather | Yash Bankhele</title>
+  <title>🌤️ SkyCast | by Yash Bankhele</title>
   <link rel="stylesheet" href="style.css" />
-<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
   <div class="container">
-    <h1 class="main-heading">🌤️ Weather by <span class="author-name">Yash Bankhele</span></h1>
+    <h1 class="main-heading">🌤️ SkyCast | <span class="author-name">Yash Bankhele</span></h1>
 
     <div class="search-box">
       <input type="text" id="cityInput" placeholder="Enter city name..." />
@@ -27,7 +25,12 @@
       <p id="wind"></p>
     </div>
 
-    
+    <div class="extras">
+      <p class="info">Get instant and reliable weather updates for any city worldwide 🌎</p>
+      <p class="tip">Tip: Try typing "Mumbai", "London", or "New York" to see it in action!</p>
+    </div>
+
+    <footer></footer>
   </div>
 
   <script src="script.js"></script>
