--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     </div>
 
     <div class="extras">
-      <p class="info">Get instant and reliable weather updates for any city worldwide 🌎</p>
-      <p class="tip">Tip: Try typing "Mumbai", "London", or "New York" to see it in action!</p>
+      <p class="info"><strong>Accurate, real-time weather data</strong> — trusted by users worldwide 🌍</p>
+      <p class="tip">💡 <em>Try searching for popular cities like <strong>Mumbai</strong>, <strong>London</strong>, or <strong>New York</strong>.</em></p>
     </div>
 
     <footer></footer>
