--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     </div>
 
     <div class="extras">
-      <p class="info"><strong>Accurate, real-time weather data</strong> — trusted by users worldwide 🌍</p>
-      <p class="tip">💡 <em>Try searching for popular cities like <strong>Mumbai</strong>, <strong>London</strong>, or <strong>New York</strong>.</em></p>
+      <p class="info">Accurate weather. Real-time updates. Trusted worldwide 🌍</p>
+      <p class="tip">💡 Try cities like <strong>Mumbai</strong>, <strong>London</strong>, or <strong>New York</strong>.</p>
     </div>
 
     <footer></footer>
