--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
     </div>
 
     <div class="extras">
-      <p class="info">Accurate weather. Real-time updates. Trusted worldwide 🌍</p>
-      <p class="tip">💡 Try cities like <strong>Mumbai</strong>, <strong>London</strong>, or <strong>New York</strong>.</p>
+     <p class="info" style="font-size: 13px;">📍 Powered by OpenWeather API — Global coverage in one click.</p>
+<p class="tip" style="font-size: 13px;">🌐 Need real-time data? Just type your city and go!</p>
+
     </div>
 
     <footer></footer>
