--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </div>
 
     <div class="extras">
-     <p class="info" style="font-size: 13px;">📍 Powered by OpenWeather API — Global coverage in one click.</p>
+     <p class="info" style="font-size: 13px;">📍 Powered by OpenWeather – Precision at your fingertips</p>
 <p class="tip" style="font-size: 13px;">🌐 Need real-time data? Just type your city and go!</p>
 
     </div>
